# Banner-Project

./: CMakeLists.txt  README.md
Assets/Shaders/: FS_ColoredVertices.glsl  FS_plainWhite.glsl  VS_toClipSpaceColorPassthrough.glsl  VS_toClipSpaceOnly.glsl
UnitTests/: ColorUT.cpp  DiskDaoUT.cpp  FileLoaderUT.cpp  GeometryDaoUT.cpp  MatrixUT.cpp  ObjParserUT.cpp  VectorUT.cpp  aliveTest.cpp
src/: GlRenderer.cpp  GlRenderer.h  MathCore.h  Renderer.h  SettingsDao.h  View.cpp  View.h  main.cpp
src/DiskAccess/: DiskUtilities.h  ObjLoader.h  ObjParser.h
src/Geometry/: Camera.h  Color.h  GeometryDao.cpp  GeometryDao.h  Matrix.cpp  Matrix.h  Vector.h
